# fullstack-dev-crm

./: .coverage  .pre-commit-config.yaml  BUILD.md  LICENSE  LLM.md  MANIFEST.in  README.md  SECURITY.md  UV_USAGE.md  client-data-manager.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-and-release.yml  ci.yml
config/: app_settings.json
scripts/: build.py  bump_version.py
src/: __init__.py  main.py
src/api/: server.py
src/config/: app_settings.py  settings.py
src/database/: db_manager.py  models.py
src/gui/: dialogs.py  main_window.py  settings_dialog.py
src/utils/: clipboard.py  encryption.py
tests/: test_basic.py
